--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,8 +6,30 @@
              tools:context=".fragments.HomeFragment">
 
     <TextView
+            android:id="@+id/homeTitle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/homeText"/>
+            android:layout_height="30dp"
+            android:text="@string/homeTitle"
+            android:textStyle="bold"
+            android:layout_margin="10dp"/>
+
+    <TextView
+            android:id="@+id/homeText"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:paddingTop="30dp"
+            android:text="@string/homeText"
+            android:layout_margin="10dp"/>
+
+    <TextView
+            android:id="@+id/homeAmountOfProducts"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textStyle="bold"
+            android:text="@string/amountOfProductsText"
+            android:textAlignment="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="200dp"/>
 
 </FrameLayout>
