--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".fragments.HomeFragment">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".fragments.HomeFragment">
 
     <TextView
             android:id="@+id/homeTitle"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:text="@string/homeTitle"
             android:textStyle="bold"
             android:layout_margin="10dp"/>
@@ -16,20 +18,16 @@
     <TextView
             android:id="@+id/homeText"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:paddingTop="30dp"
+            android:layout_height="wrap_content"
             android:text="@string/homeText"
             android:layout_margin="10dp"/>
 
     <TextView
             android:id="@+id/homeAmountOfProducts"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:textStyle="bold"
             android:text="@string/amountOfProductsText"
             android:textAlignment="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="200dp"/>
-
-</FrameLayout>
+            android:layout_margin="10dp"/>
+</LinearLayout>
