--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,4 +30,13 @@
             android:text="@string/amountOfProductsText"
             android:textAlignment="center"
             android:layout_margin="10dp"/>
+
+    <TextView
+            android:id="@+id/healthcheck"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="@string/offline"
+            android:textAlignment="center"
+            android:layout_margin="10dp" />
 </LinearLayout>
